--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity
             android:name=".LoginActivity"
             android:exported="true"/>
+        <activity android:name=".RegistrationActivity"
+            android:exported="true"/>
 
     </application>
 </manifest>
